Accessibility: fix color contrast in various places

--- a/themes/openy_themes/openy_carnation/src/scss/modules/_footer.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_footer.scss
@@ -122,7 +122,7 @@
   .footer__copyright {
     background: black;
     font-size: 15px;
-    color: $gray-400;
+    color: $gray-300;
 
     .block-openy-carnation-footer-menu-right-menu {
       ul {
